--- a/SalesWebMvc/Views/Sellers/Create.cshtml
+++ b/SalesWebMvc/Views/Sellers/Create.cshtml
@@ -33,6 +33,7 @@
             </div>
             <div class="mb-3">
                 <input type="submit" value="Create" class="btn btn-success" />
+                <a asp-action="Index">Back To List</a>
             </div>
         </form>
     </div>
