--- a/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/SimpleSearch.cshtml
@@ -1,6 +1,80 @@
-﻿
+﻿@model IEnumerable<SalesWebMvc.Models.SalesRecord>
+
 @{
     ViewData["Title"] = "Simple Search";
 }
 
 <h2>@ViewData["Title"]</h2>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <form class="d-flex w-100" role="search">
+            <div class="mb-3 me-3 w-auto">
+                <label for="minDate" class="form-label text-white">Min Date</label>
+                <input type="date" class="form-control" name="minDate" value="@ViewData["minDate"]" />
+            </div>
+            <div class="mb-3 me-3 w-auto">
+                <label for="maxDate" class="form-label text-white">Max Date</label>
+                <input type="date" class="form-control" name="maxDate" value="@ViewData["maxDate"]" />
+            </div>
+            <div class="mb-3 ms-auto">
+                <button type="submit" class="btn btn-primary">Filter</button>
+            </div>
+        </form>
+    </div>
+</nav>
+<div class="card">
+    <div class="card-header">
+        <h3 class="card-title">Total sales = @Model.Sum(obj => obj.Amount).ToString("F2")</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr class="table-success">
+                    <th>
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Date)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Seller.Department)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Amount)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Id)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Date)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Seller.Department.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Amount)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Status)
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
