--- a/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
+++ b/SalesWebMvc/Views/SalesRecords/GroupingSearch.cshtml
@@ -1,5 +1,63 @@
-﻿@{
+﻿@model IEnumerable<IGrouping<Department, SalesRecord>>
+
+@{
     ViewData["Title"] = "Grouping Search";
+    DateTime minDate = DateTime.Parse(ViewData["minDate"] as string);
+    DateTime maxDate = DateTime.Parse(ViewData["maxDate"] as string);
 }
 
 <h2>@ViewData["Title"]</h2>
+
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <!-- Formulário com layout Flexbox para alinhamento -->
+        <form class="d-flex w-100" role="search">
+            <!-- Campo de entrada para Min Date -->
+            <div class="mb-3 me-3 w-auto">
+                <label for="minDate" class="form-label text-white">Min Date</label>
+                <input type="date" class="form-control" name="minDate" value="@ViewData["minDate"]">
+            </div>
+            <!-- Campo de entrada para Max Date -->
+            <div class="mb-3 me-3 w-auto">
+                <label for="maxDate" class="form-label text-white">Max Date</label>
+                <input type="date" class="form-control" name="maxDate" value="@ViewData["maxDate"]">
+            </div>
+            <!-- Botão de filtro -->
+            <div class="mb-3 ms-auto">
+                <button type="submit" class="btn btn-primary">Filter</button>
+            </div>
+        </form>
+    </div>
+</nav>
+
+@foreach (var departmentGroup in Model)
+{
+    <div class="card mb-3">
+        <div class="card-header">
+            <h5 class="card-title">Department @departmentGroup.Key.Name, Total sales = @departmentGroup.Key.TotalSales(minDate, maxDate).ToString("F2")</h5>
+        </div>
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr class="success">
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Seller</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in departmentGroup)
+                    {
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.Date)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Amount)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Seller.Name)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
